fix(subnavigation): make the separator line below the subnavigation visible in hcm

--- a/packages/styles/src/components/subnavigation.scss
+++ b/packages/styles/src/components/subnavigation.scss
@@ -132,7 +132,26 @@ $module-name: 'subnavigation';
         z-index: utility-functions.z-index(subnavigation, underscore-link);
       }
 
-      @include utilities.high-contrast-mode() {
+      // @include utilities.high-contrast-mode() {
+      //   // use important so other background colors don't overwrite this color
+      //   color: highlight !important;
+      //   text-decoration: underline;
+
+      //   &::after {
+      //     display: block;
+      //     background-color: Highlight;
+      //   }
+      // }
+    }
+  }
+
+  @include utilities.high-contrast-mode() {
+    &::after {
+      background-color: CanvasText;
+    }
+
+    &-link {
+      &.active {
         // use important so other background colors don't overwrite this color
         color: highlight !important;
         text-decoration: underline;
